fdo#66811: vcl: fix broken OUString with length STRING_LEN

ImplSalGetUniString was wrongly converted and constructs OUString with
invalid length in WinSalGraphics::CreateFontSubset; this is then
implicitly converted to an empty UniString so the font names are
missing in the PDF files generated on Windows.

(regression from 9e310cc32923ceb4b18d97ce68d54a339b935f01)

Change-Id: I1603e62cf18f353f3d7de322b9111a173dc6b225